feat: adicionando rota de deletar categoria
